# ds-mcp

./: Cargo.toml  README.md  build.rs  config.example.json  config.schema.json  flake.nix  justfile  server.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
packaging/aur/: PKGBUILD
src/: config.rs  http.rs  main.rs  registry.rs  sqlguard.rs  tools.rs
src/source/: endpoint.rs  mod.rs  mongo.rs  redis.rs  rest.rs  sql.rs  ssh.rs
tests/: e2e_sqlite.rs
