[package]
name = "ds-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.32"
rmcp = { version = "2.1.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
rust_decimal = "1.42.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlparser = "0.62.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "chrono", "uuid", "json", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.4"
