[package]
name = "ds-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
bson = "2"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
deadpool-tiberius = { version = "0.1.9", default-features = false, features = ["rustls", "sql-browser"] }
dirs = "6.0.0"
futures-util = "0.3.32"
http = "1.4.2"
mongodb = "3.7.0"
rmcp = { version = "2.1.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
rust_decimal = "1.42.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlparser = "0.62.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "chrono", "uuid", "json", "rust_decimal"] }
thiserror = "2.0.18"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "chrono", "tds73"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.4"
